--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,32 +13,28 @@
     "build:preview": "eas build --profile preview --platform all"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.0",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-firebase/app": "^18.7.3",
-    "@react-native-firebase/auth": "^18.7.3",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/native-stack": "^6.9.17",
-    "expo": "~51.0.0",
-    "expo-auth-session": "~5.5.2",
-    "expo-constants": "~16.0.0",
-    "expo-linear-gradient": "~13.0.2",
-    "expo-router": "~3.5.0",
-    "expo-status-bar": "~1.12.1",
-    "expo-web-browser": "~13.0.3",
-    "react": "18.2.0",
-    "react-native": "0.74.1",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "~3.10.0",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
-    "react-native-webview": "13.8.6"
+    "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-navigation/native": "^7.0.0",
+    "@react-navigation/native-stack": "^7.0.0",
+    "babel-preset-expo": "^54.0.8",
+    "expo": "^54.0.29",
+    "expo-constants": "~18.0.12",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-router": "~6.0.19",
+    "expo-status-bar": "~3.0.9",
+    "react": "19.1.0",
+    "react-native": "^0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0",
-    "@types/react": "~18.2.45",
-    "typescript": "~5.3.3"
+    "@babel/core": "^7.25.0",
+    "@types/react": "~19.1.10",
+    "typescript": "~5.9.2"
   },
   "private": true
 }
