add login google

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -31,7 +31,8 @@
     },
     "scheme": "virtuallabmobile",
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-web-browser"
     ],
     "extra": {
       "router": {
