--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,10 +19,14 @@
     "@react-navigation/native-stack": "^7.0.0",
     "babel-preset-expo": "^54.0.8",
     "expo": "^54.0.29",
+    "expo-auth-session": "^7.0.10",
     "expo-constants": "~18.0.12",
+    "expo-crypto": "^15.0.8",
     "expo-linear-gradient": "~15.0.8",
     "expo-router": "~6.0.19",
     "expo-status-bar": "~3.0.9",
+    "expo-web-browser": "^15.0.10",
+    "firebase": "^12.6.0",
     "react": "19.1.0",
     "react-native": "^0.81.5",
     "react-native-gesture-handler": "~2.28.0",
